google-compute-engine/src/test/resources/firewall_insert.json
{"name": "%s", "network": "https://www.googleapis.com/compute/v1beta15/projects/myproject/global/networks/%s", "sourceRanges": [%s],"sourceTags":[%s],"targetTags":[%s],"allowed":[{"IPProtocol":"tcp","ports":[%s]}]}
