google-compute-engine/src/test/resources/firewall_list.json
{
 "kind": "compute#firewallList",
 "id": "projects/google/firewalls",
 "selfLink": "https://www.googleapis.com/compute/v1beta15/projects/google/firewalls",
 "items": [
  {

   "kind": "compute#firewall",
   "id": "12862241031274216284",
   "creationTimestamp": "2012-04-13T03:05:02.855",
   "selfLink": "https://www.googleapis.com/compute/v1beta15/projects/myproject/firewalls/jclouds-test",
   "name": "jclouds-test",
   "description": "Internal traffic from default allowed",
   "network": "https://www.googleapis.com/compute/v1beta15/projects/myproject/networks/jclouds-test",
   "sourceRanges": [
    "10.0.0.0/8"
   ],
   "allowed": [
    {
     "IPProtocol": "tcp",
     "ports": [
      "1-65535"
     ]
    },
    {
     "IPProtocol": "udp",
     "ports": [
      "1-65535"
     ]
    },
    {
     "IPProtocol": "icmp"
    }
   ]
  },
  {

   "kind": "compute#firewall",
   "id": "12862241067393040785",
   "creationTimestamp": "2012-04-13T03:05:04.365",
   "selfLink": "https://www.googleapis.com/compute/v1beta15/projects/google/firewalls/default-ssh",
   "name": "default-ssh",
   "description": "SSH allowed from anywhere",
   "network": "https://www.googleapis.com/compute/v1beta15/projects/google/networks/default",
   "sourceRanges": [
    "0.0.0.0/0"
   ],
   "allowed": [
    {
     "IPProtocol": "tcp",
     "ports": [
      "22"
     ]
    }
   ]
  }
 ]
}
