google-compute-engine/src/test/resources/network_get.json
{
 "kind": "compute#network",
 "id": "13024414170909937976",
 "creationTimestamp": "2012-10-24T20:13:19.967",
 "selfLink": "https://www.googleapis.com/compute/v1beta15/projects/myproject/networks/jclouds-test",
 "name": "default",
 "description": "Default network for the project",
 "IPv4Range": "10.0.0.0/8",
 "gatewayIPv4": "10.0.0.1"
}
